# Unified-Notification-Gateway

./: LICENSE  README.md  env.example  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/core/: celery_app.py  config.py
app/schemas/: notification.py
app/services/: base.py  email_service.py  factory.py  slack_service.py
app/workers/: tasks.py
