[project]
name = "unified-notification-gateway"
version = "0.1.0"
description = "Unified Notification Gateway to send notifications to different channels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
]
